; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_idctdsp_msa.c_put_pixels_clamped_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_idctdsp_msa.c_put_pixels_clamped_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @put_pixels_clamped_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_pixels_clamped_msa(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = load i64, i64* %15, align 8
  %25 = load i64, i64* %16, align 8
  %26 = load i64, i64* %17, align 8
  %27 = load i64, i64* %18, align 8
  %28 = load i64, i64* %19, align 8
  %29 = load i64, i64* %20, align 8
  %30 = load i64, i64* %21, align 8
  %31 = load i64, i64* %22, align 8
  %32 = call i32 @LD_SH8(i32* %23, i32 8, i64 %24, i64 %25, i64 %26, i64 %27, i64 %28, i64 %29, i64 %30, i64 %31)
  %33 = load i64, i64* %15, align 8
  %34 = load i64, i64* %16, align 8
  %35 = load i64, i64* %17, align 8
  %36 = load i64, i64* %18, align 8
  %37 = load i64, i64* %19, align 8
  %38 = load i64, i64* %20, align 8
  %39 = load i64, i64* %21, align 8
  %40 = load i64, i64* %22, align 8
  %41 = call i32 @CLIP_SH8_0_255(i64 %33, i64 %34, i64 %35, i64 %36, i64 %37, i64 %38, i64 %39, i64 %40)
  %42 = load i64, i64* %15, align 8
  %43 = load i64, i64* %15, align 8
  %44 = load i64, i64* %16, align 8
  %45 = load i64, i64* %16, align 8
  %46 = load i64, i64* %17, align 8
  %47 = load i64, i64* %17, align 8
  %48 = load i64, i64* %18, align 8
  %49 = load i64, i64* %18, align 8
  %50 = load i64, i64* %15, align 8
  %51 = load i64, i64* %16, align 8
  %52 = load i64, i64* %17, align 8
  %53 = load i64, i64* %18, align 8
  %54 = call i32 @PCKEV_B4_SH(i64 %42, i64 %43, i64 %44, i64 %45, i64 %46, i64 %47, i64 %48, i64 %49, i64 %50, i64 %51, i64 %52, i64 %53)
  %55 = load i64, i64* %19, align 8
  %56 = load i64, i64* %19, align 8
  %57 = load i64, i64* %20, align 8
  %58 = load i64, i64* %20, align 8
  %59 = load i64, i64* %21, align 8
  %60 = load i64, i64* %21, align 8
  %61 = load i64, i64* %22, align 8
  %62 = load i64, i64* %22, align 8
  %63 = load i64, i64* %19, align 8
  %64 = load i64, i64* %20, align 8
  %65 = load i64, i64* %21, align 8
  %66 = load i64, i64* %22, align 8
  %67 = call i32 @PCKEV_B4_SH(i64 %55, i64 %56, i64 %57, i64 %58, i64 %59, i64 %60, i64 %61, i64 %62, i64 %63, i64 %64, i64 %65, i64 %66)
  %68 = load i64, i64* %15, align 8
  %69 = trunc i64 %68 to i32
  %70 = call i32 @__msa_copy_u_d(i32 %69, i32 0)
  store i32 %70, i32* %7, align 4
  %71 = load i64, i64* %16, align 8
  %72 = trunc i64 %71 to i32
  %73 = call i32 @__msa_copy_u_d(i32 %72, i32 0)
  store i32 %73, i32* %8, align 4
  %74 = load i64, i64* %17, align 8
  %75 = trunc i64 %74 to i32
  %76 = call i32 @__msa_copy_u_d(i32 %75, i32 0)
  store i32 %76, i32* %9, align 4
  %77 = load i64, i64* %18, align 8
  %78 = trunc i64 %77 to i32
  %79 = call i32 @__msa_copy_u_d(i32 %78, i32 0)
  store i32 %79, i32* %10, align 4
  %80 = load i64, i64* %19, align 8
  %81 = trunc i64 %80 to i32
  %82 = call i32 @__msa_copy_u_d(i32 %81, i32 0)
  store i32 %82, i32* %11, align 4
  %83 = load i64, i64* %20, align 8
  %84 = trunc i64 %83 to i32
  %85 = call i32 @__msa_copy_u_d(i32 %84, i32 0)
  store i32 %85, i32* %12, align 4
  %86 = load i64, i64* %21, align 8
  %87 = trunc i64 %86 to i32
  %88 = call i32 @__msa_copy_u_d(i32 %87, i32 0)
  store i32 %88, i32* %13, align 4
  %89 = load i64, i64* %22, align 8
  %90 = trunc i64 %89 to i32
  %91 = call i32 @__msa_copy_u_d(i32 %90, i32 0)
  store i32 %91, i32* %14, align 4
  %92 = load i32, i32* %7, align 4
  %93 = load i32, i32* %8, align 4
  %94 = load i32, i32* %9, align 4
  %95 = load i32, i32* %10, align 4
  %96 = load i32*, i32** %5, align 8
  %97 = load i32, i32* %6, align 4
  %98 = call i32 @SD4(i32 %92, i32 %93, i32 %94, i32 %95, i32* %96, i32 %97)
  %99 = load i32, i32* %6, align 4
  %100 = mul nsw i32 4, %99
  %101 = load i32*, i32** %5, align 8
  %102 = sext i32 %100 to i64
  %103 = getelementptr inbounds i32, i32* %101, i64 %102
  store i32* %103, i32** %5, align 8
  %104 = load i32, i32* %11, align 4
  %105 = load i32, i32* %12, align 4
  %106 = load i32, i32* %13, align 4
  %107 = load i32, i32* %14, align 4
  %108 = load i32*, i32** %5, align 8
  %109 = load i32, i32* %6, align 4
  %110 = call i32 @SD4(i32 %104, i32 %105, i32 %106, i32 %107, i32* %108, i32 %109)
  ret void
}

declare dso_local i32 @LD_SH8(i32*, i32, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @CLIP_SH8_0_255(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @PCKEV_B4_SH(i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @__msa_copy_u_d(i32, i32) #1

declare dso_local i32 @SD4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
